Convert to React + Vite for Netlify deployment
- Replaced Next.js with React + Vite + React Router
- Added Tailwind CSS with custom CSS variables
- Created all pages: Home, Schools, SchoolDetail, Compare, About, Login, Register, Contact, Privacy, Terms
- Added netlify.toml with SPA fallback redirects
- Build output in dist/ folder

--- a/web-public/netlify.toml
+++ b/web-public/netlify.toml
@@ -1,18 +1,13 @@
 [build]
   command = "npm run build"
-  publish = ".next"
+  publish = "dist"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-# Redirects for SPA fallback
+# SPA fallback - redirect all routes to index.html
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  conditions = {Role = ["admin"]}
 
-# Handle Next.js routes
 [[headers]]
   for = "/*"
   [headers.values]
