--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "npm run build"
+  base = "web-public"
+  command = "npm install && npm run build"
   publish = "dist"
 
 # SPA fallback - redirect all routes to index.html
