--- a/web-public/package.json
+++ b/web-public/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "firebase": "^12.6.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
